# SDD-BreakfastOrderingSystem-Practice

./: .gitignore  Dockerfile  Readme.md  docker-compose.yml  main.py  pyproject.toml
.AI-Logging/: System Prompt.md  Tasks.md
.ai/: Arch-Decision Record.md  Scratchpad.md
.spec/: Deployment.md  Plan.md  Regulations.md  Spec.md  Tasks.md
app/: __init__.py  models.py  schemas.py  services.py
app/api/: __init__.py  admin.py  auth.py  customer.py
features/: create_order.feature  environment.py  menu_and_cart.feature  order_creation.feature
features/steps/: menu_and_cart_steps.py  order_creation_steps.py  order_steps.py
instance/: app.db
migrations/versions/: 1af833f5ae2f_initial_migration.py  c57d3d3b6b73_initial_migration.py
src/: app.py  config.py  models.py
src/api/: auth_routes.py  routes.py
src/services/: order_service.py
tests/: conftest.py  test_admin_api.py  test_customer_api.py  test_models.py  test_services.py
tests/integration/: test_admin_api.py  test_customer_api.py
tests/unit/: test_order_model.py  test_order_service.py  test_user_model.py
