[project]
name = "sdd-breakfastorderingsystem-practice"
version = "0.1.0"
description = "Add your description here"
readme = "Readme.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "behave>=1.3.3",
    "flask>=3.1.2",
    "flask-migrate>=4.1.0",
    "flask-restful>=0.3.10",
    "flask-sqlalchemy>=3.1.1",
    "pytest>=9.0.2",
]
